feat: validate user's email by sending them a mail
