# pkg/user/router.go
@@ -8,6 +8,7 @@ import (
 func Routes(r *gin.Engine, authenticationMiddleware middleware.AuthenticationMiddleware, authorizationMiddleware middleware.AuthorizationMiddleware, handler Handler) {
 	r.POST("/users", handler.SignUp)
 	r.POST("/refresh", handler.RefreshToken)
+	r.GET("/users/validate/:token", handler.ValidateEmail)
 
 	basicAuthenticationRouter := r.Group("")
 	basicAuthenticationRouter.Use(authenticationMiddleware.BasicAuthentication)
